css fix, prevent overlap of cards.

--- a/root_ecommerce_website/frontend/UI_UX/ecommerce_uiux_finalproj_satish/src/components/productGrid.css
+++ b/root_ecommerce_website/frontend/UI_UX/ecommerce_uiux_finalproj_satish/src/components/productGrid.css
@@ -1,4 +1,4 @@
-.grid {
+.custom-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     /* Responsive grid */
